# backend-py

./: .gitignore  consumer.py  producer.py  pyproject.toml
02-fastapi-prodcon/: app.py  constants.py
02-fastapi-prodcon/consumer/: consumer.py
02-fastapi-prodcon/producer/: app.py  producer.py  schema.py
03-beyond-crud/migrations/: env.py
03-beyond-crud/migrations/versions/: b1d43bfe24d9_add_passwd_hash.py  c33341d1f2e9_add_roles_to_users.py  c6e1c8f68aa0_init.py
03-beyond-crud/src/: __init__.py  config.py
03-beyond-crud/src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
03-beyond-crud/src/books/: books_data.py  models.py  routes.py  schemas.py  service.py
03-beyond-crud/src/db/: main.py  redis.py
04-asyncpg-test/: 01.py  02.py  03.py  04.py  05.py  conn.py
kafka-docker/: docker-compose.yaml
pg-docker/: docker-compose.yaml
redis-docker/: docker-compose.yaml
