[project]
name = "ecom-py"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "confluent-kafka>=2.14.0",
    "faker>=40.13.0",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
]
